# MORGOTH

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
Example_Data/: Irinotecan_Discretized.txt  example_Json_config.json
morgoth/: __init__.py  __main__.py  morgoth.py  multi_rf_main.py  multivariate_dt.py  similarity_test_train.py
src/: multi_rf_main.py  multivariate_dt.py  similarity_test_train.py
src/CP_Pipeline/: conformal_prediction.py
